Add retries in case ansible ssh sessions crash

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,4 +1,8 @@
 [defaults]
 gathering=implicit
-transport=paramiko
+transport=ssh      # Use ssh directly
 timeout=5
+
+[ssh_connection]
+retries=2          # Retry if the ansible ssh session crashes
+ssh_args=-o ControlMaster=auto -o ControlPersist=60s
